--- a/zeleniKljucHakaton/Info.plist
+++ b/zeleniKljucHakaton/Info.plist
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>NSCameraUsageDescription</key>
-	<string>need this to work</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>this needs alaso</string>
-</dict>
+<dict/>
 </plist>
